fixed code